[project]
name = "comfyui_fabric"
description = "ComfyUI nodes based on the paper [a/FABRIC: Personalizing Diffusion Models with Iterative Feedback](https://arxiv.org/abs/2307.10159) (Feedback via Attention-Based Reference Image Conditioning)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ssitu/ComfyUI_fabric"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_fabric"
Icon = ""
